Turn privacy filter in tabs, fixed, and worked on alignments

--- a/app/assets/stylesheets/components/_sidebar_menu.scss
+++ b/app/assets/stylesheets/components/_sidebar_menu.scss
@@ -38,7 +38,7 @@ span {
   margin:auto;
 }
 
-.active {
+.social-media-icon.active {
   background-color: $blue;
   .link {
     color: #FFF;
